force-app/main/default/objects/Estructura__c/Estructura__c.object-meta.xml
<CustomObject>
    <label>Estructura</label>
    <nameField>
        <label>Nombre de Estructura</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estructuras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>