force-app/main/default/objects/Estructura__c/fields/CantidadBodega__c.field-meta.xml
<CustomField>
    <fullName>CantidadBodega__c</fullName>
    <formula>CantidadTotal__c -  CantidadColocada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad en Bodega</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>