force-app/main/default/objects/Estructura__c/fields/CantidadColocada__c.field-meta.xml
<CustomField>
    <fullName>CantidadColocada__c</fullName>
    <label>Cantidad Colocada</label>
    <summaryForeignKey>EstructuraEnSItio__c.Estructura__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>