force-app/main/default/objects/Estructura__c/fields/CantidadTotal__c.field-meta.xml
<CustomField>
    <fullName>CantidadTotal__c</fullName>
    <label>Cantidad Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>