force-app/main/default/objects/Estructura__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <displayFormat>ES-{0000}</displayFormat>
    <label>Código</label>
    <type>AutoNumber</type>
</CustomField>