force-app/main/default/objects/Estructura__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pais</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Estructuras</relationshipLabel>
    <relationshipName>Estructuras</relationshipName>
    <type>Lookup</type>
</CustomField>