force-app/main/default/objects/Estructura__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Producto__c</columns>
    <columns>Pais__c</columns>
    <columns>CantidadTotal__c</columns>
    <columns>CantidadColocada__c</columns>
    <columns>CantidadBodega__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>